<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".CadastroEventos">

    <EditText
        android:id="@+id/editText_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/textTitulo_activity_CadastroEvento"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editText_dataInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textDataInicial_activity_CadastroEvento"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText_dataFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textDataFinal_activity_CadastroEvento"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/textEndereco_activity_CadastroEvento"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_descicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/textDescricao_activity_CadastroEvento"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/bt_cadastrar_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_activity_inicial_cadastrar" />

</LinearLayout>